--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Weather</title>
 
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body onload="DefaultScreen()">
 
@@ -57,7 +57,7 @@
     </div>
 
 
-    <script src="js\script.js"></script>
+    <script src="script.js"></script>
 
 
 </body>
